Strict backward compatibility